# untitled-chore-app

./: .env  .gitignore  .prettierrc  README.md  a.http  config.py  index.html  instructions.txt  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.txt
.github/workflows/: dev_untitled-chore-app.yml  main_untitled-chore-app.yml
backend/: .dockerignore  .gitignore  Dockerfile  config.py  pyproject.toml
backend/data/: default_chores.json
backend/lib/: io.py
backend/lib/db/: home.py
backend/routes/: chores.py  homes.py
backend/routes/username/: root.py
backend/tests/lib/auth/: test_user.py
data/: default_chores.json
frontend/: .env  .prettierrc  README.md  index.html  package-lock.json  package.json
frontend/src/: main.js
lib/auth/: auth.py  tokens.py  user.py
lib/db/: chores.py  db.py  home.py  leaderboard.py  task.py  timetable.py  types.py  user.py
routes/: __init__.py  chores.py  homes.py  index.py  root.py
routes/chores/: __init__.py
routes/house/: __init__.py
routes/timetable/: __init__.py
routes/username/: __init__.py  house.py  root.py
routes/users/: index.py
src/: App.vue  main.js
src/assets/: main.css
src/components/: AddTimetable.vue  AssignedList.vue  ChangeEmail.vue  ChangePassword.vue  ChoreCard.vue  Contact.vue  DeleteAccount.vue  Error.vue  FAQ.vue  HouseMembers.vue  LoginForm.vue  LoginPrompt.vue  NavBar.vue  Navbar.vue  RegisterForm.vue  TitleCard.vue  UserNavbar.vue
src/router/: index.js
src/stores/: chores.js  home.js  timetable.js  user.js  util.js
src/views/: Chores.vue  (+7 more)
(+29 files in other folders)
